objects/MY_Partner__c.object
<CustomObject>
    <description>testing object</description>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description text</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Foxtel_Description__c</fullName>
        <label>Foxtel Description</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>autoid__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <label>autoid</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>fax__c</fullName>
        <label>fax</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>phone__c</fullName>
        <label>phone number</label>
        <type>Phone</type>
    </fields>
    <label>MY Partner</label>
    <nameField>
        <label>Partner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MY partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>